--- a/style.css
+++ b/style.css
@@ -66,3 +66,45 @@ header .p02{
     margin-top: -550px;
 }
 
+.redirect-btn {
+    display: block;
+    margin: 20px auto 0;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+    background-color: #008CBA;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    margin-top: 100px;
+  }
+
+  .redirect-btn:hover {
+    background-color: #006d93;
+  }
+
+  .style-video{
+    position: relative; 
+    width: 100%; 
+    height: 100%; 
+    padding-top: 56.2500%;
+    padding-bottom: 0; 
+    box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); 
+    margin-top: 1.6em; 
+    margin-bottom: 0.9em; 
+    overflow: hidden;
+    border-radius: 8px; will-change: transform;
+    margin-top: 200px;
+  }
+
+  .lazy {
+    position: absolute;
+    width: 100%; 
+    height: 100%; 
+    top: 0; left: 0; 
+    border: none; 
+    padding: 0;
+    margin: 0;
+
+  }
